fix(ui) Fix tooltip alignment on frame collapse (#22560)

--- a/src/sentry/static/sentry/less/group-detail.less
+++ b/src/sentry/static/sentry/less/group-detail.less
@@ -800,7 +800,6 @@ div.traceback > ul {
       width: 16px;
       height: 16px;
       padding: 0;
-      margin-left: 10px;
       line-height: 16px;
       font-size: 9px;
       text-align: center;
